--- a/app/src/main/res/layout/item_daily_rv.xml
+++ b/app/src/main/res/layout/item_daily_rv.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/sp_14"
         app:layout_constraintBottom_toBottomOf="@+id/iv_status"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:contentDescription="天气状态"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/sp_14"
         app:layout_constraintEnd_toEndOf="@+id/tv_low"
         app:layout_constraintStart_toStartOf="@+id/tv_date"
@@ -34,7 +34,7 @@
         android:id="@+id/tv_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/sp_14"
         app:layout_constraintBottom_toBottomOf="@+id/tv_low"
         app:layout_constraintEnd_toStartOf="@+id/tv_low"
@@ -44,7 +44,7 @@
         android:id="@+id/tv_low"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/temp_min_tx"
+        android:textColor="@color/black_3"
         android:textSize="@dimen/sp_14"
         app:layout_constraintBottom_toBottomOf="@+id/iv_status"
         app:layout_constraintEnd_toEndOf="parent"
