--- a/app/src/main/res/layout/activity_daily_manager.xml
+++ b/app/src/main/res/layout/activity_daily_manager.xml
@@ -6,26 +6,72 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".manage.DailyManager"
-    android:background="@drawable/manager_bg">
+    android:background="@color/bg_color">
 
+    <!-- 退出按钮 -->
+    <ImageView
+        android:id="@+id/exit3"
+        android:layout_width="77dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/arrows_left_ic1" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout4"
+    <!-- 日历视图 -->
+    <CalendarView
+        android:id="@+id/calendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_marginTop="92dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    <!-- 筛选日期布局 -->
+    <LinearLayout
+        android:id="@+id/filter_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/calendar">
 
-        </ScrollView>
+        <Spinner
+            android:id="@+id/spinner_year"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
+        <Spinner
+            android:id="@+id/spinner_month"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
 
+        <Spinner
+            android:id="@+id/spinner_day"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <Button
+            android:id="@+id/btn_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="筛选" />
     </LinearLayout>
 
+    <!-- 添加日程按钮 - 调整约束为筛选布局下方 -->
+    <Button
+        android:id="@+id/addSchedule"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="添加日程"
+        app:layout_constraintTop_toBottomOf="@+id/filter_layout" />
+
+    <!-- 日程输入和确认添加布局 - 调整约束为添加按钮下方 -->
     <LinearLayout
         android:id="@+id/lin"
         android:layout_width="match_parent"
@@ -35,7 +81,6 @@
         app:layout_constraintTop_toBottomOf="@+id/addSchedule"
         tools:layout_editor_absoluteX="0dp">
 
-
         <EditText
             android:id="@+id/scheduleDetailInput"
             android:layout_width="290dp"
@@ -43,36 +88,18 @@
             android:hint="请输入具体日程"
             android:visibility="gone"
             android:textSize="16sp" />
+
         <Button
             android:id="@+id/checkAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="确认添加"
             android:visibility="gone" />
-
     </LinearLayout>
 
-    <Button
-        android:id="@+id/addSchedule"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="添加日程"
-        app:layout_constraintTop_toBottomOf="@+id/calendar"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <CalendarView
-        android:id="@+id/calendar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="92dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></CalendarView>
-
-
-
+    <!-- 日程显示布局 - 调整约束为输入布局下方 -->
     <LinearLayout
+        android:id="@+id/schedule_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -86,7 +113,7 @@
             android:layout_marginLeft="20dp"
             android:clickable="true"
             android:textSize="15sp"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/schedule2"
@@ -94,8 +121,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:clickable="true"
-            android:textSize="15dp"
-            android:visibility="gone"/>
+            android:textSize="15sp"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/schedule3"
@@ -123,33 +150,6 @@
             android:layout_marginLeft="20dp"
             android:clickable="true"
             android:textSize="15sp" />
-
-
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/exit3"
-        android:layout_width="77dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
-        app:srcCompat="@drawable/arrows_left_ic" />
-
-    <ImageView
-        android:id="@+id/menu"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.933"
-        app:layout_constraintStart_toEndOf="@+id/exit3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/menu" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
