--- a/app/src/main/res/layout/dialog_daily_detail.xml
+++ b/app/src/main/res/layout/dialog_daily_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="1000dp"
-    android:background="@drawable/manager_bg"
+    android:background="@color/bg_color"
     android:paddingBottom="@dimen/dp_16">
 
     <ImageView
