--- a/app/src/main/res/layout/item_hourly_rv.xml
+++ b/app/src/main/res/layout/item_hourly_rv.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="上午10:00"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/sp_14" />
     <!--气候图标-->
     <ImageView
@@ -29,6 +29,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="25℃"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/sp_20" />
 </LinearLayout>
