--- a/app/src/main/res/menu/menu_manager.xml
+++ b/app/src/main/res/menu/menu_manager.xml
@@ -1,8 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/item_login_register"
-        android:title="退出登录" />
-
-
+<!--    <item-->
+<!--        android:id="@+id/item_login_register"-->
+<!--        android:title="退出登录" />-->
+<!--    <item-->
+<!--        android:id="@+id/item_settings"-->
+<!--        android:title="个人信息" />-->
 </menu>
